--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -2,10 +2,10 @@
 
 .home {
   flex: 1;
-  height: 100%;
   display: flex;
   flex-direction: column;
-  background: #010310; color: white;
+  background: #010310;
+  color: white;
 
   > header {
     height: px(99);
@@ -21,13 +21,18 @@
       "box3 box3 box4 box5" 363fr / 366fr 361fr 811fr 747fr;
     grid-column-gap: px(28);
     grid-row-gap: px(28);
-    > section {text-align: center;}
+
+    > section {
+      text-align: center;
+    }
+
     .bordered {
       border: 1px solid #0764bc;
       border-radius: 4px;
       position: relative;
       box-shadow: 0 0 2px 0 #0e325f, inset 0 0 2px 0 #0e325f;
       background: #0c1139;
+
       &::before {
         content: '';
         position: absolute;
@@ -66,11 +71,13 @@
     > .section5 {
       grid-area: box5;
     }
+
     .管辖统计 {
       height: px(315);
       display: flex;
       flex-direction: column;
       align-items: center;
+
       h2 {
         flex-shrink: 0;
         border: 1px solid #0a5299;
@@ -81,7 +88,8 @@
         padding: px(10) px(28);
         text-shadow: 0 0 px(3) white;
       }
-      .chart{
+
+      .chart {
         flex: 1;
         width: 100%;
       }
