--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -10,9 +10,23 @@
   > header {
     height: px(99);
     background-size: cover;
+    width: px(2420);
+    margin: 0 auto;
+  }
+  > footer {
+    height: px(68);
+    border: 1px solid #0d2d59;
+    margin: px(20) 0 1px;
+    border-radius: 4px;
+    background: #0c0d2b;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   > main {
+    width: px(2420);
+    margin: 0 auto;
     padding-top: px(30);
     flex: 1;
     display: grid;
@@ -61,6 +75,9 @@
 
     > .section2 {
       grid-area: box2;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
 
     > .section3 {
@@ -75,7 +92,7 @@
       grid-area: box5;
     }
 
-    .管辖统计 {
+    .管辖统计, .破获排名, .发案趋势, .案发时段 {
       height: px(315);
       display: flex;
       flex-direction: column;
@@ -97,25 +114,11 @@
         width: 100%;
       }
     }
+    .发案趋势, .案发时段 {
+      height: px(363);
+    }
     .破获排名 {
       height: px(423);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      h2 {
-        flex-shrink: 0;
-        border: 1px solid #0a5299;
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
-        font-size: px(22);
-        line-height: px(24);
-        padding: px(10) px(28);
-        text-shadow: 0 0 px(3) white;
-      }
-      .chart {
-        flex: 1;
-        width: 100%;
-      }
       .legend {
         display: flex;
         align-items: center;
