--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -123,12 +123,11 @@
     .年龄段 {display: flex;flex-direction: column;
       height: px(363);
       > .charts {
-        width: 100%;flex: 1; border: 1px solid red;
+        width: 100%;flex: 1;
         display: flex; padding: px(30);
       }
       &-图1, &-图2, &-图3 {
         flex: 1;
-        border: 1px solid red;
         display: flex; flex-direction: column;
       }
     }
