--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -130,6 +130,28 @@
         flex: 1;
         display: flex; flex-direction: column;
       }
+      &-图1, &-图2 {
+        .legend {height: px(40); display: flex; align-items: center;
+          justify-content: center; flex-wrap: wrap;
+          > span {display: inline-block; width: px(16); height: px(10);
+            border-radius: px(2); margin: 0 px(10);}
+          .male {background: #33a4fa;}
+          .female {background: #8d70f8;}
+        }
+        .chart {
+          position: relative;
+          display: flex;
+          > .main {flex: 1;}
+          > .text {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
+            color: #33a4fa; font-size: px(40); text-shadow: 0 0 px(20) #33a4fa;font-weight: bold;}
+        }
+      }
+      &-图2 {
+        width: px(290); flex-shrink: 0;
+        .legend {
+          justify-content: flex-start;
+        }
+      }
     }
     .籍贯 {
       height: px(753); background: transparent;
