--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -98,12 +98,15 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+
       > .row1 {
         height: px(317);
       }
+
       > .row2 {
         height: px(317);
       }
+
       > .row3 {
         height: px(455);
       }
@@ -125,10 +128,13 @@
         padding: px(10) px(28);
         text-shadow: 0 0 px(3) white;
       }
+
       .charts {
-        width: 100%;flex: 1;
+        width: 100%;
+        flex: 1;
         display: flex;
       }
+
       .chart {
         flex: 1;
         width: 100%;
@@ -161,6 +167,7 @@
           align-items: center;
           justify-content: center;
           flex-wrap: wrap;
+          padding-right: px(10);
 
           > span {
             display: inline-block;
@@ -199,8 +206,11 @@
           }
         }
       }
+
       &-图2 {
-        width: px(290); flex-shrink: 0;
+        width: px(290);
+        flex-shrink: 0;
+
         .legend {
           justify-content: flex-start;
         }
