--- a/src/shared/style.scss
+++ b/src/shared/style.scss
@@ -45,6 +45,8 @@ body {
   flex: 1;
   display: flex;
   flex-direction: column;
+  background-image: url("../images/background.png");
+  background-size: cover;
 }
 
 h1, h2, h3, h4, h5, h6 {
